<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_venezuela">What is the capital of Venezuela?</string>
    <string name="question_france">What is the capital of France?</string>
    <string name="question_spain">What is the capital of Spain?</string>
    <string name="question_usa">What is the capital of the United States?</string>
    <string name="question_brazil">What is the capital of Brazil?</string>
    <string name="question_portugal">What is the capital of Portugal?</string>

    <string name="first_choice">Paris</string>
    <string name="second_choice">Madrid</string>
    <string name="third_choice">Caracas</string>
    <string name="fourth_choice">Dallas</string>


    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="reset_button">Reset</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="score">0</string>
</resources>